Fixed timeline not resizing properly when content was larger than the visible

--- a/src/styles/widgets/timeline.styl
+++ b/src/styles/widgets/timeline.styl
@@ -70,7 +70,7 @@
 
     .list
       float: left
-      height: 100%
+      min-height: 100%
       width: 310px
       //padding: 15px
       border-right: 1px solid rgba(0,0,0,.35)
@@ -78,7 +78,7 @@
       background-color: #232323
 
     .time
-      height: 100%
+      min-height: 100%
       margin-left: 310px
 
     .row
